Formalis nyelvek/II.3/II_3.output
Grammar

    0 $accept: program $end

    1 program: instruction ';'
    2        | instruction error ';'
    3        | program instruction ';'
    4        | program instruction error ';'

    5 instruction: declaration
    6            | value_assigning
    7            | read
    8            | write
    9            | if
   10            | while
   11            | logical_expression

   12 declaration: TYPE_INT VARIABLE
   13            | TYPE_DOUBLE VARIABLE

   14 value_assigning: VARIABLE '=' arithmetic_expression

   15 arithmetic_expression: INT
   16                      | DOUBLE
   17                      | VARIABLE
   18                      | arithmetic_expression '+' arithmetic_expression
   19                      | arithmetic_expression '-' arithmetic_expression
   20                      | arithmetic_expression '*' arithmetic_expression
   21                      | '(' arithmetic_expression ')'
   22                      | '-' arithmetic_expression

   23 read: READ VARIABLE

   24 write: WRITE arithmetic_expression
   25      | WRITE STRING

   26 logical_expression: arithmetic_expression EQUALS arithmetic_expression
   27                   | arithmetic_expression NOT_EQUALS arithmetic_expression
   28                   | logical_expression OR logical_expression
   29                   | logical_expression AND logical_expression
   30                   | '(' logical_expression ')'

   31 if: IF '(' logical_expression ')' '{' program '}'
   32   | IF '(' logical_expression ')' '{' program '}' ELSE '{' program '}'

   33 while: WHILE '(' logical_expression ')' '{' program '}'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 21 30 31 32 33
')' (41) 21 30 31 32 33
'*' (42) 20
'+' (43) 18
'-' (45) 19 22
';' (59) 1 2 3 4
'=' (61) 14
'{' (123) 31 32 33
'}' (125) 31 32 33
error (256) 2 4
TYPE_INT (258) 12
TYPE_DOUBLE (259) 13
VARIABLE (260) 12 13 14 17 23
INT (261) 15
DOUBLE (262) 16
STRING (263) 25
WRITE (264) 24 25
READ (265) 23
IF (266) 31 32
ELSE (267) 32
WHILE (268) 33
EQUALS (269) 26
NOT_EQUALS (270) 27
OR (271) 28
AND (272) 29


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
program (28)
    on left: 1 2 3 4, on right: 0 3 4 31 32 33
instruction (29)
    on left: 5 6 7 8 9 10 11, on right: 1 2 3 4
declaration (30)
    on left: 12 13, on right: 5
value_assigning (31)
    on left: 14, on right: 6
arithmetic_expression (32)
    on left: 15 16 17 18 19 20 21 22, on right: 14 18 19 20 21 22 24
    26 27
read (33)
    on left: 23, on right: 7
write (34)
    on left: 24 25, on right: 8
logical_expression (35)
    on left: 26 27 28 29 30, on right: 11 28 29 30 31 32 33
if (36)
    on left: 31 32, on right: 9
while (37)
    on left: 33, on right: 10


state 0

    0 $accept: . program $end

    TYPE_INT     shift, and go to state 1
    TYPE_DOUBLE  shift, and go to state 2
    VARIABLE     shift, and go to state 3
    INT          shift, and go to state 4
    DOUBLE       shift, and go to state 5
    WRITE        shift, and go to state 6
    READ         shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    '-'          shift, and go to state 10
    '('          shift, and go to state 11

    program                go to state 12
    instruction            go to state 13
    declaration            go to state 14
    value_assigning        go to state 15
    arithmetic_expression  go to state 16
    read                   go to state 17
    write                  go to state 18
    logical_expression     go to state 19
    if                     go to state 20
    while                  go to state 21


state 1

   12 declaration: TYPE_INT . VARIABLE

    VARIABLE  shift, and go to state 22


state 2

   13 declaration: TYPE_DOUBLE . VARIABLE

    VARIABLE  shift, and go to state 23


state 3

   14 value_assigning: VARIABLE . '=' arithmetic_expression
   17 arithmetic_expression: VARIABLE .

    '='  shift, and go to state 24

    $default  reduce using rule 17 (arithmetic_expression)


state 4

   15 arithmetic_expression: INT .

    $default  reduce using rule 15 (arithmetic_expression)


state 5

   16 arithmetic_expression: DOUBLE .

    $default  reduce using rule 16 (arithmetic_expression)


state 6

   24 write: WRITE . arithmetic_expression
   25      | WRITE . STRING

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    STRING    shift, and go to state 26
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 28


state 7

   23 read: READ . VARIABLE

    VARIABLE  shift, and go to state 29


state 8

   31 if: IF . '(' logical_expression ')' '{' program '}'
   32   | IF . '(' logical_expression ')' '{' program '}' ELSE '{' program '}'

    '('  shift, and go to state 30


state 9

   33 while: WHILE . '(' logical_expression ')' '{' program '}'

    '('  shift, and go to state 31


state 10

   22 arithmetic_expression: '-' . arithmetic_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 32


state 11

   21 arithmetic_expression: '(' . arithmetic_expression ')'
   30 logical_expression: '(' . logical_expression ')'

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 11

    arithmetic_expression  go to state 33
    logical_expression     go to state 34


state 12

    0 $accept: program . $end
    3 program: program . instruction ';'
    4        | program . instruction error ';'

    $end         shift, and go to state 35
    TYPE_INT     shift, and go to state 1
    TYPE_DOUBLE  shift, and go to state 2
    VARIABLE     shift, and go to state 3
    INT          shift, and go to state 4
    DOUBLE       shift, and go to state 5
    WRITE        shift, and go to state 6
    READ         shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    '-'          shift, and go to state 10
    '('          shift, and go to state 11

    instruction            go to state 36
    declaration            go to state 14
    value_assigning        go to state 15
    arithmetic_expression  go to state 16
    read                   go to state 17
    write                  go to state 18
    logical_expression     go to state 19
    if                     go to state 20
    while                  go to state 21


state 13

    1 program: instruction . ';'
    2        | instruction . error ';'

    error  shift, and go to state 37
    ';'    shift, and go to state 38


state 14

    5 instruction: declaration .

    $default  reduce using rule 5 (instruction)


state 15

    6 instruction: value_assigning .

    $default  reduce using rule 6 (instruction)


state 16

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression
   26 logical_expression: arithmetic_expression . EQUALS arithmetic_expression
   27                   | arithmetic_expression . NOT_EQUALS arithmetic_expression

    EQUALS      shift, and go to state 39
    NOT_EQUALS  shift, and go to state 40
    '+'         shift, and go to state 41
    '-'         shift, and go to state 42
    '*'         shift, and go to state 43


state 17

    7 instruction: read .

    $default  reduce using rule 7 (instruction)


state 18

    8 instruction: write .

    $default  reduce using rule 8 (instruction)


state 19

   11 instruction: logical_expression .
   28 logical_expression: logical_expression . OR logical_expression
   29                   | logical_expression . AND logical_expression

    OR   shift, and go to state 44
    AND  shift, and go to state 45

    $default  reduce using rule 11 (instruction)


state 20

    9 instruction: if .

    $default  reduce using rule 9 (instruction)


state 21

   10 instruction: while .

    $default  reduce using rule 10 (instruction)


state 22

   12 declaration: TYPE_INT VARIABLE .

    $default  reduce using rule 12 (declaration)


state 23

   13 declaration: TYPE_DOUBLE VARIABLE .

    $default  reduce using rule 13 (declaration)


state 24

   14 value_assigning: VARIABLE '=' . arithmetic_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 46


state 25

   17 arithmetic_expression: VARIABLE .

    $default  reduce using rule 17 (arithmetic_expression)


state 26

   25 write: WRITE STRING .

    $default  reduce using rule 25 (write)


state 27

   21 arithmetic_expression: '(' . arithmetic_expression ')'

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 47


state 28

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression
   24 write: WRITE arithmetic_expression .

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43

    $default  reduce using rule 24 (write)


state 29

   23 read: READ VARIABLE .

    $default  reduce using rule 23 (read)


state 30

   31 if: IF '(' . logical_expression ')' '{' program '}'
   32   | IF '(' . logical_expression ')' '{' program '}' ELSE '{' program '}'

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 11

    arithmetic_expression  go to state 16
    logical_expression     go to state 48


state 31

   33 while: WHILE '(' . logical_expression ')' '{' program '}'

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 11

    arithmetic_expression  go to state 16
    logical_expression     go to state 49


state 32

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression
   22                      | '-' arithmetic_expression .

    '*'  shift, and go to state 43

    $default  reduce using rule 22 (arithmetic_expression)


state 33

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression
   21                      | '(' arithmetic_expression . ')'
   26 logical_expression: arithmetic_expression . EQUALS arithmetic_expression
   27                   | arithmetic_expression . NOT_EQUALS arithmetic_expression

    EQUALS      shift, and go to state 39
    NOT_EQUALS  shift, and go to state 40
    '+'         shift, and go to state 41
    '-'         shift, and go to state 42
    '*'         shift, and go to state 43
    ')'         shift, and go to state 50


state 34

   28 logical_expression: logical_expression . OR logical_expression
   29                   | logical_expression . AND logical_expression
   30                   | '(' logical_expression . ')'

    OR   shift, and go to state 44
    AND  shift, and go to state 45
    ')'  shift, and go to state 51


state 35

    0 $accept: program $end .

    $default  accept


state 36

    3 program: program instruction . ';'
    4        | program instruction . error ';'

    error  shift, and go to state 52
    ';'    shift, and go to state 53


state 37

    2 program: instruction error . ';'

    ';'  shift, and go to state 54


state 38

    1 program: instruction ';' .

    $default  reduce using rule 1 (program)


state 39

   26 logical_expression: arithmetic_expression EQUALS . arithmetic_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 55


state 40

   27 logical_expression: arithmetic_expression NOT_EQUALS . arithmetic_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 56


state 41

   18 arithmetic_expression: arithmetic_expression '+' . arithmetic_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 57


state 42

   19 arithmetic_expression: arithmetic_expression '-' . arithmetic_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 58


state 43

   20 arithmetic_expression: arithmetic_expression '*' . arithmetic_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 27

    arithmetic_expression  go to state 59


state 44

   28 logical_expression: logical_expression OR . logical_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 11

    arithmetic_expression  go to state 16
    logical_expression     go to state 60


state 45

   29 logical_expression: logical_expression AND . logical_expression

    VARIABLE  shift, and go to state 25
    INT       shift, and go to state 4
    DOUBLE    shift, and go to state 5
    '-'       shift, and go to state 10
    '('       shift, and go to state 11

    arithmetic_expression  go to state 16
    logical_expression     go to state 61


state 46

   14 value_assigning: VARIABLE '=' arithmetic_expression .
   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43

    $default  reduce using rule 14 (value_assigning)


state 47

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression
   21                      | '(' arithmetic_expression . ')'

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    ')'  shift, and go to state 50


state 48

   28 logical_expression: logical_expression . OR logical_expression
   29                   | logical_expression . AND logical_expression
   31 if: IF '(' logical_expression . ')' '{' program '}'
   32   | IF '(' logical_expression . ')' '{' program '}' ELSE '{' program '}'

    OR   shift, and go to state 44
    AND  shift, and go to state 45
    ')'  shift, and go to state 62


state 49

   28 logical_expression: logical_expression . OR logical_expression
   29                   | logical_expression . AND logical_expression
   33 while: WHILE '(' logical_expression . ')' '{' program '}'

    OR   shift, and go to state 44
    AND  shift, and go to state 45
    ')'  shift, and go to state 63


state 50

   21 arithmetic_expression: '(' arithmetic_expression ')' .

    $default  reduce using rule 21 (arithmetic_expression)


state 51

   30 logical_expression: '(' logical_expression ')' .

    $default  reduce using rule 30 (logical_expression)


state 52

    4 program: program instruction error . ';'

    ';'  shift, and go to state 64


state 53

    3 program: program instruction ';' .

    $default  reduce using rule 3 (program)


state 54

    2 program: instruction error ';' .

    $default  reduce using rule 2 (program)


state 55

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression
   26 logical_expression: arithmetic_expression EQUALS arithmetic_expression .

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43

    $default  reduce using rule 26 (logical_expression)


state 56

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression
   27 logical_expression: arithmetic_expression NOT_EQUALS arithmetic_expression .

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43

    $default  reduce using rule 27 (logical_expression)


state 57

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   18                      | arithmetic_expression '+' arithmetic_expression .
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression

    '*'  shift, and go to state 43

    $default  reduce using rule 18 (arithmetic_expression)


state 58

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   19                      | arithmetic_expression '-' arithmetic_expression .
   20                      | arithmetic_expression . '*' arithmetic_expression

    '*'  shift, and go to state 43

    $default  reduce using rule 19 (arithmetic_expression)


state 59

   18 arithmetic_expression: arithmetic_expression . '+' arithmetic_expression
   19                      | arithmetic_expression . '-' arithmetic_expression
   20                      | arithmetic_expression . '*' arithmetic_expression
   20                      | arithmetic_expression '*' arithmetic_expression .

    $default  reduce using rule 20 (arithmetic_expression)


state 60

   28 logical_expression: logical_expression . OR logical_expression
   28                   | logical_expression OR logical_expression .
   29                   | logical_expression . AND logical_expression

    $default  reduce using rule 28 (logical_expression)


state 61

   28 logical_expression: logical_expression . OR logical_expression
   29                   | logical_expression . AND logical_expression
   29                   | logical_expression AND logical_expression .

    $default  reduce using rule 29 (logical_expression)


state 62

   31 if: IF '(' logical_expression ')' . '{' program '}'
   32   | IF '(' logical_expression ')' . '{' program '}' ELSE '{' program '}'

    '{'  shift, and go to state 65


state 63

   33 while: WHILE '(' logical_expression ')' . '{' program '}'

    '{'  shift, and go to state 66


state 64

    4 program: program instruction error ';' .

    $default  reduce using rule 4 (program)


state 65

   31 if: IF '(' logical_expression ')' '{' . program '}'
   32   | IF '(' logical_expression ')' '{' . program '}' ELSE '{' program '}'

    TYPE_INT     shift, and go to state 1
    TYPE_DOUBLE  shift, and go to state 2
    VARIABLE     shift, and go to state 3
    INT          shift, and go to state 4
    DOUBLE       shift, and go to state 5
    WRITE        shift, and go to state 6
    READ         shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    '-'          shift, and go to state 10
    '('          shift, and go to state 11

    program                go to state 67
    instruction            go to state 13
    declaration            go to state 14
    value_assigning        go to state 15
    arithmetic_expression  go to state 16
    read                   go to state 17
    write                  go to state 18
    logical_expression     go to state 19
    if                     go to state 20
    while                  go to state 21


state 66

   33 while: WHILE '(' logical_expression ')' '{' . program '}'

    TYPE_INT     shift, and go to state 1
    TYPE_DOUBLE  shift, and go to state 2
    VARIABLE     shift, and go to state 3
    INT          shift, and go to state 4
    DOUBLE       shift, and go to state 5
    WRITE        shift, and go to state 6
    READ         shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    '-'          shift, and go to state 10
    '('          shift, and go to state 11

    program                go to state 68
    instruction            go to state 13
    declaration            go to state 14
    value_assigning        go to state 15
    arithmetic_expression  go to state 16
    read                   go to state 17
    write                  go to state 18
    logical_expression     go to state 19
    if                     go to state 20
    while                  go to state 21


state 67

    3 program: program . instruction ';'
    4        | program . instruction error ';'
   31 if: IF '(' logical_expression ')' '{' program . '}'
   32   | IF '(' logical_expression ')' '{' program . '}' ELSE '{' program '}'

    TYPE_INT     shift, and go to state 1
    TYPE_DOUBLE  shift, and go to state 2
    VARIABLE     shift, and go to state 3
    INT          shift, and go to state 4
    DOUBLE       shift, and go to state 5
    WRITE        shift, and go to state 6
    READ         shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    '-'          shift, and go to state 10
    '('          shift, and go to state 11
    '}'          shift, and go to state 69

    instruction            go to state 36
    declaration            go to state 14
    value_assigning        go to state 15
    arithmetic_expression  go to state 16
    read                   go to state 17
    write                  go to state 18
    logical_expression     go to state 19
    if                     go to state 20
    while                  go to state 21


state 68

    3 program: program . instruction ';'
    4        | program . instruction error ';'
   33 while: WHILE '(' logical_expression ')' '{' program . '}'

    TYPE_INT     shift, and go to state 1
    TYPE_DOUBLE  shift, and go to state 2
    VARIABLE     shift, and go to state 3
    INT          shift, and go to state 4
    DOUBLE       shift, and go to state 5
    WRITE        shift, and go to state 6
    READ         shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    '-'          shift, and go to state 10
    '('          shift, and go to state 11
    '}'          shift, and go to state 70

    instruction            go to state 36
    declaration            go to state 14
    value_assigning        go to state 15
    arithmetic_expression  go to state 16
    read                   go to state 17
    write                  go to state 18
    logical_expression     go to state 19
    if                     go to state 20
    while                  go to state 21


state 69

   31 if: IF '(' logical_expression ')' '{' program '}' .
   32   | IF '(' logical_expression ')' '{' program '}' . ELSE '{' program '}'

    ELSE  shift, and go to state 71

    $default  reduce using rule 31 (if)


state 70

   33 while: WHILE '(' logical_expression ')' '{' program '}' .

    $default  reduce using rule 33 (while)


state 71

   32 if: IF '(' logical_expression ')' '{' program '}' ELSE . '{' program '}'

    '{'  shift, and go to state 72


state 72

   32 if: IF '(' logical_expression ')' '{' program '}' ELSE '{' . program '}'

    TYPE_INT     shift, and go to state 1
    TYPE_DOUBLE  shift, and go to state 2
    VARIABLE     shift, and go to state 3
    INT          shift, and go to state 4
    DOUBLE       shift, and go to state 5
    WRITE        shift, and go to state 6
    READ         shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    '-'          shift, and go to state 10
    '('          shift, and go to state 11

    program                go to state 73
    instruction            go to state 13
    declaration            go to state 14
    value_assigning        go to state 15
    arithmetic_expression  go to state 16
    read                   go to state 17
    write                  go to state 18
    logical_expression     go to state 19
    if                     go to state 20
    while                  go to state 21


state 73

    3 program: program . instruction ';'
    4        | program . instruction error ';'
   32 if: IF '(' logical_expression ')' '{' program '}' ELSE '{' program . '}'

    TYPE_INT     shift, and go to state 1
    TYPE_DOUBLE  shift, and go to state 2
    VARIABLE     shift, and go to state 3
    INT          shift, and go to state 4
    DOUBLE       shift, and go to state 5
    WRITE        shift, and go to state 6
    READ         shift, and go to state 7
    IF           shift, and go to state 8
    WHILE        shift, and go to state 9
    '-'          shift, and go to state 10
    '('          shift, and go to state 11
    '}'          shift, and go to state 74

    instruction            go to state 36
    declaration            go to state 14
    value_assigning        go to state 15
    arithmetic_expression  go to state 16
    read                   go to state 17
    write                  go to state 18
    logical_expression     go to state 19
    if                     go to state 20
    while                  go to state 21


state 74

   32 if: IF '(' logical_expression ')' '{' program '}' ELSE '{' program '}' .

    $default  reduce using rule 32 (if)
